--- a/VIT_Module/6-Python_Arayuz/UI_Files/menu_ui.ui
+++ b/VIT_Module/6-Python_Arayuz/UI_Files/menu_ui.ui
@@ -389,6 +389,11 @@ QPushButton:hover{
       <height>20</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel {
+	color: rgb(255, 85, 0);
+}</string>
+    </property>
     <property name="text">
      <string>Account</string>
     </property>
