--- a/VIT_Module/6-Python_Arayuz/UI_Files/login_vit_ui.ui
+++ b/VIT_Module/6-Python_Arayuz/UI_Files/login_vit_ui.ui
@@ -75,8 +75,8 @@ QPushButton:hover{
    <widget class="QPushButton" name="pushButtonExit">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>200</y>
+      <x>250</x>
+      <y>275</y>
       <width>91</width>
       <height>31</height>
      </rect>
@@ -186,10 +186,10 @@ QLineEdit:hover {
    <widget class="QLabel" name="labelLogo">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>20</y>
-      <width>251</width>
-      <height>71</height>
+      <x>105</x>
+      <y>35</y>
+      <width>185</width>
+      <height>40</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -199,7 +199,10 @@ QLineEdit:hover {
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>pictures/werhere_logo.ico</pixmap>
+     <pixmap>pictures/logo2.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButtonForgot">
@@ -208,12 +211,12 @@ QLineEdit:hover {
       <x>90</x>
       <y>250</y>
       <width>181</width>
-      <height>31</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton{
-	border-radius : 15px;
+	border-radius : 10px;
 	background-color: rgba(0, 0, 0,0%);
     color: rgb(255, 255, 255);
 }
@@ -263,6 +266,62 @@ color: rgb(255, 255, 255);</string>
      <string>Show</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButtonBack">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>200</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial</family>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+	border-radius : 15px;
+	background-color : rgb(25, 200, 200);
+	color: rgb(255, 255, 255);
+}
+QPushButton:hover{
+	background-color: rgb(20, 135, 135);
+    border: 2px solid rgb(162, 0, 0);
+}
+</string>
+    </property>
+    <property name="text">
+     <string>Back</string>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>60</width>
+      <height>60</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelLogo_2">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>20</y>
+      <width>65</width>
+      <height>70</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgba(0, 0, 0,0%);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>pictures/werhere_logo.ico</pixmap>
+    </property>
+   </widget>
    <zorder>pushButtonExit</zorder>
    <zorder>lineEditUsername</zorder>
    <zorder>lineEditPassword</zorder>
@@ -271,6 +330,8 @@ color: rgb(255, 255, 255);</string>
    <zorder>labelFail</zorder>
    <zorder>pushButtonLogin</zorder>
    <zorder>checkBoxPassword</zorder>
+   <zorder>pushButtonBack</zorder>
+   <zorder>labelLogo_2</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -282,7 +343,6 @@ color: rgb(255, 255, 255);</string>
     </rect>
    </property>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <tabstops>
   <tabstop>lineEditUsername</tabstop>
