--- a/VIT_Module/6-Python_Arayuz/UI_Files/about_coder_ui.ui
+++ b/VIT_Module/6-Python_Arayuz/UI_Files/about_coder_ui.ui
@@ -27,7 +27,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>pictures/logo1.ico</normaloff>pictures/logo1.ico</iconset>
+    <normaloff>pictures/logo_organization1.ico</normaloff>pictures/logo_organization1.ico</iconset>
   </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
