--- a/VIT_Module/6-Python_Arayuz/UI_Files/add_new_user_ui.ui
+++ b/VIT_Module/6-Python_Arayuz/UI_Files/add_new_user_ui.ui
@@ -15,7 +15,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>pictures/werhere_icon.png</normaloff>pictures/werhere_icon.png</iconset>
+    <normaloff>pictures/logo_organization1.ico</normaloff>pictures/logo_organization1.ico</iconset>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: qlineargradient(spread:pad, x1:0.489, y1:1, x2:0.494, y2:0, stop:0 rgba(71, 71, 71, 255), stop:1 rgba(255, 255, 255, 255));
@@ -64,7 +64,7 @@ QToolTip { background-color: yellow; color: black; border: 1px solid black;}</st
        <string/>
       </property>
       <property name="pixmap">
-       <pixmap>pictures/logo2.png</pixmap>
+       <pixmap>pictures/logo_organization2.png</pixmap>
       </property>
       <property name="scaledContents">
        <bool>true</bool>
@@ -606,7 +606,7 @@ QPushButton:focus  {
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>pictures/icon_add_new_user_orj.png</pixmap>
+    <pixmap>pictures/icon_add_new_user.png</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
@@ -654,7 +654,7 @@ QPushButton:focus  {
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>pictures/user_pic.png</pixmap>
+     <pixmap>pictures/pic_user.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
