--- a/VIT_Module/6-Python_Arayuz/UI_Files/management_ui.ui
+++ b/VIT_Module/6-Python_Arayuz/UI_Files/management_ui.ui
@@ -20,10 +20,11 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>pictures/logo1.ico</normaloff>pictures/logo1.ico</iconset>
+    <normaloff>pictures/logo_organization1.ico</normaloff>pictures/logo_organization1.ico</iconset>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: qlineargradient(spread:pad, x1:0.489, y1:1, x2:0.494, y2:0, stop:0 rgba(71, 71, 71, 255), stop:1 rgba(255, 255, 255, 255));
+   <string notr="true">background-color: qlineargradient(spread:pad, x1:0.499773, y1:1, x2:0.5, y2:0.00568182, stop:0 rgba(0, 0, 0, 255), stop:1 rgba(255, 255, 255, 255));
+
 
 QToolTip { background-color: yellow; color: black; border: 1px solid black;}</string>
   </property>
@@ -81,7 +82,7 @@ QPushButton:focus {
    <widget class="QPushButton" name="pushButtonBackMenu">
     <property name="geometry">
      <rect>
-      <x>70</x>
+      <x>190</x>
       <y>480</y>
       <width>120</width>
       <height>61</height>
@@ -208,36 +209,6 @@ QPushButton:focus  {
      </size>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButtonExit">
-    <property name="geometry">
-     <rect>
-      <x>310</x>
-      <y>480</y>
-      <width>141</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>16</pointsize>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-	border-radius : 10px;
-	color: rgb(255, 255, 255);
-}
-
-QPushButton:hover{
-	background-color: rgb(20, 135, 135);
-    border: 2px solid rgb(255, 80, 0);
-}
-</string>
-    </property>
-    <property name="text">
-     <string>Exit</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="labelLogo">
     <property name="geometry">
      <rect>
@@ -266,7 +237,7 @@ QPushButton:hover{
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>pictures/logo1.ico</pixmap>
+     <pixmap>pictures/logo_organization1.ico</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -306,7 +277,7 @@ QPushButton:hover{
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>pictures/logo2.png</pixmap>
+     <pixmap>pictures/logo_organization2.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -420,8 +391,6 @@ QPushButton:focus {
     <addaction name="actionLogs"/>
     <addaction name="separator"/>
     <addaction name="actionBack_Menu"/>
-    <addaction name="separator"/>
-    <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menuAbout">
     <property name="title">
@@ -475,7 +444,6 @@ QPushButton:focus {
  </widget>
  <tabstops>
   <tabstop>pushButtonBackMenu</tabstop>
-  <tabstop>pushButtonExit</tabstop>
   <tabstop>pushButtonAddNewUser</tabstop>
   <tabstop>pushButtonResetUserPassword</tabstop>
   <tabstop>pushButtonUpdateDriveFolder</tabstop>
