--- a/VIT_Module/6-Python_Arayuz/UI_Files/reset_users_pass_ui.ui
+++ b/VIT_Module/6-Python_Arayuz/UI_Files/reset_users_pass_ui.ui
@@ -15,7 +15,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>pictures/logo1.ico</normaloff>pictures/logo1.ico</iconset>
+    <normaloff>pictures/logo_organization1.ico</normaloff>pictures/logo_organization1.ico</iconset>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: qlineargradient(spread:pad, x1:0.489, y1:1, x2:0.494, y2:0, stop:0 rgba(71, 71, 71, 255), stop:1 rgba(255, 255, 255, 255));
@@ -64,7 +64,7 @@ QToolTip { background-color: yellow; color: black; border: 1px solid black;}</st
        <string/>
       </property>
       <property name="pixmap">
-       <pixmap>pictures/logo2.png</pixmap>
+       <pixmap>pictures/logo_organization2.png</pixmap>
       </property>
       <property name="scaledContents">
        <bool>true</bool>
@@ -225,19 +225,19 @@ QPushButton:focus  {
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>pictures/user_pic.png</pixmap>
+    <pixmap>pictures/pic_user.png</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="labelRightLock">
+  <widget class="QLabel" name="labelLock">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>30</x>
      <y>229</y>
-     <width>131</width>
-     <height>121</height>
+     <width>161</width>
+     <height>151</height>
     </rect>
    </property>
    <property name="minimumSize">
@@ -259,7 +259,7 @@ QPushButton:focus  {
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>pictures/icon_change_user_password_orj.png</pixmap>
+    <pixmap>pictures/icon_change_user_password.png</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
@@ -309,7 +309,7 @@ QPushButton:focus  {
   </widget>
   <zorder>frameResetUsersPasswords</zorder>
   <zorder>frameYellowSide</zorder>
-  <zorder>labelRightLock</zorder>
+  <zorder>labelLock</zorder>
   <zorder>labelUserImage</zorder>
  </widget>
  <resources/>
