--- a/VIT_Module/6-Python_Arayuz/UI_Files/settings_ui.ui
+++ b/VIT_Module/6-Python_Arayuz/UI_Files/settings_ui.ui
@@ -15,7 +15,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>pictures/werhere_icon.png</normaloff>pictures/werhere_icon.png</iconset>
+    <normaloff>pictures/logo_organization1.ico</normaloff>pictures/logo_organization1.ico</iconset>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: qlineargradient(spread:pad, x1:0.489, y1:1, x2:0.494, y2:0, stop:0 rgba(71, 71, 71, 255), stop:1 rgba(255, 255, 255, 255));</string>
@@ -48,7 +48,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>pictures/settingFoto.png</pixmap>
+    <pixmap>pictures/pic_setting.png</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
